# vleue_navigator2d

./: Cargo.toml  README.md
assets/maps/: [p2]Small_Island (2p).tmx  [p2]Small_Island (2p).toml  maps.tiled-session
assets/maps/tsxs/: Cave.tsx  Cliffmask.tsx  Crater.tsx  Crtr2Lav.tsx  Crtr2Wtr.tsx  CrtrJnt.tsx  CrtrMisc.tsx  CrtrRDst.tsx  CrtrRoad.tsx  GrasClif.tsx  GrasRoad.tsx  Grass.tsx  Grass2.tsx  GrassRDst.tsx  Grs2CrtB.tsx  Grs2Crtc.tsx  Grs2Crtr.tsx  Grs2Mnt.tsx  Grs2Watr.tsx  Grss2Lav.tsx  GrssCrtr.tsx  GrssMisc.tsx  Ice2Snow.tsx  Ice2Watr.tsx  IceBrk1.tsx  IceBrk2.tsx  IceDent.tsx  IceRDest.tsx  IceRoad.tsx  Icicle.tsx  Icicle2.tsx  Icicle3.tsx  Lava.tsx  LavaBubl.tsx  LavaFlow.tsx  LavaRDest.tsx  LavaRoad.tsx  Mnt2Crtb.tsx  Mnt2Crtc.tsx  Mnt2Crtr.tsx  (+90 more)
examples/: auto_navmesh_parry2d.rs  auto_navmesh_parry2d_compound.rs  auto_navmesh_parry2d_tiled_map.rs  delaunay_triangulation.rs  gltf.rs  layers.rs  layers_basic.rs  layers_inclined.rs  lines.rs  many.rs  many_navmesh_parry2d.rs  moving.rs  random_obstacles.rs
examples/helpers/: agent2d.rs  ui.rs
src/: updater.rs
src/obstacles/: mod.rs
src/obstacles/parry2d/: mod.rs
wasm/: index.html
