[package]
name = "vleue_navigator2d"
version = "0.12.0"
authors = ["François Mockers <francois.mockers@vleue.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["pathfinding", "bevy", "navmesh", "navigation"]
readme = "README.md"
description = "Navmesh plugin for Bevy"
repository = "https://github.com/vleue/vleue_navigator2d"
homepage = "https://github.com/vleue/vleue_navigator2d"
documentation = "https://docs.rs/vleue_navigator2d"
categories = ["game-development"]

[dependencies]
itertools = "0.14"
tracing = { version = "0.1", optional = true }
log = "0.4.27"

[dependencies.parry2d]
version = "0.22"
optional = true

[dependencies.rayon]
version = "1.10.0"

[dependencies.nalgebra]
version = "0.33"
features = ["convert-glam029"]
optional = true

[dependencies.bitflags]
version = "2.9"
optional = true

[dependencies.polyanya]
version = "0.13.0"

[dependencies.spade]
version = "2.14.0"
features = ["mint"]

[dependencies.bevy]
version = "0.16"
features = ["bevy_render", "bevy_asset", "bevy_log"]
default-features = false

[dev-dependencies]
rand = "0.9"

[dev-dependencies.bevy]
version = "0.16"
features = [
    "bevy_window",
    "bevy_ui",
    "bevy_text",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_scene",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_sprite",
    "bevy_gizmos",
    # Required for TonyMcMapface
    "tonemapping_luts",
    "multi_threaded",
    "bevy_state",
    "default_font",
    # to build on linux
    "x11",
    "animation", # TODO: remove
]
default-features = false

[features]
default = ["debug-with-gizmos", "parry2d"]
debug-with-gizmos = ["bevy/bevy_gizmos"]
detailed-layers = ["polyanya/detailed-layers"]
parry2d = ["dep:parry2d", "dep:nalgebra", "dep:bitflags"]

[[example]]
name = "auto_navmesh_parry2d"
required-features = ["parry2d"]

[[example]]
name = "auto_navmesh_parry2d_compound"
required-features = ["parry2d"]

[[example]]
name = "many_navmesh_parry2d"
required-features = ["parry2d"]

[[example]]
name = "layers"
required-features = ["avian3d", "detailed-layers"]

[[example]]
name = "layers_basic"
required-features = ["avian3d"]

[[example]]
name = "layers_inclined"
required-features = ["avian3d", "detailed-layers"]

[package.metadata.docs.rs]
features = ["detailed-layers"]
